--- a/test.ipynb
+++ b/test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -29,33 +29,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "param = {\n",
-    "        'embedding': np.random.random(size=(300, 400)),\n",
-    "        'embedding_type': config.embedding_type,\n",
-    "        'embedding_is_training': config.embedding_is_training,\n",
-    "        'mode': config.mode,\n",
-    "        'hidden_size': config.hidden_size,\n",
-    "        'dropout_p': config.dropout_p,\n",
-    "        'encoder_dropout_p': config.encoder_dropout_p,\n",
-    "        'encoder_bidirectional': config.encoder_bidirectional,\n",
-    "        'encoder_layer_num': config.encoder_layer_num,\n",
-    "        'is_bn': config.is_bn\n",
-    "    }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "model = r_net.Model(param)"
+    "model = nn.Embedding(100000, 300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8125.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "6500/4*5"
    ]
   },
   {
@@ -1868,7 +1868,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "p = []\n",
@@ -1879,7 +1881,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from torch import optim"
@@ -1887,11 +1891,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "a = optim.Adam(model.parameters(), lr=1)"
+    "a = optim.Adam(p, lr=1)"
    ]
   },
   {
